responsive navbar home dan responsive quiz

--- a/home.html
+++ b/home.html
@@ -90,22 +90,16 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container d-flex align-items-center">
-
-                <!-- Logo + Text Brand -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container d-flex align-items-center justify-content-between">
                 <div class="d-flex align-items-center">
-                    <img src="img/logo-djkn.png" alt="DJKN CARE Logo" height="80" class="me-0">
-
-                    <!-- TEXT DJKN-CARE -->
-                    <span style="font-size: 1.8rem; font-weight: 700;">
-                        <span style="color: #006838;">DJKN</span><span style="color: #8cc342;">-CARE</span>
+                    <img src="img/logo-djkn.png" alt="DJKN CARE Logo" height="50" class="me-2 me-md-3">
+                    <span class="brand-text-djkn" style="font-size: 1.8rem; font-weight: 700;">
+                        <span class="text-djkn" style="color: #006838;">DJKN</span><span class="text-care" style="color: #8cc342;">-CARE</span>
                     </span>
                 </div>
 
-                <!-- Logo STIKES di sebelah kanan -->
-                <img src="img/logo-stikes.png" alt="Logo STIKES" height="60" class="ms-auto">
-
+                <img src="img/logo-stikes.png" alt="Logo STIKES" height="40" class="ms-auto">
             </div>
         </nav>
     </header>
